unpackaged/main/default/objects/simplesms__SMS_Template__c/simplesms__SMS_Template__c.object-meta.xml
<CustomObject>
    <description>A template that can be used to send messages to recipients.  The templates contain merge fields that allow the content to be set dynamically much like email templates.</description>
    <label>SMS Template</label>
    <nameField>
        <label>SMS Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>