unpackaged/main/default/objects/simplesms__SMS_Template__c/fields/simplesms__Body__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Body__c</fullName>
    <description>The body of the message that will be sent.</description>
    <inlineHelpText>The body of the message that will be sent.</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>