unpackaged/main/default/objects/simplesms__SMS_Template__c/fields/simplesms__Code__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Code__c</fullName>
    <description>A system-generated unique identifier for this template.</description>
    <inlineHelpText>A system-generated unique identifier for this template.</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>