unpackaged/main/default/objects/simplesms__SMS_Template__c/fields/simplesms__From_Number__c.field-meta.xml
<CustomField>
    <fullName>simplesms__From_Number__c</fullName>
    <description>When this template is used with a workflow rule, this identifies the originating phone number.</description>
    <formula>simplesms__Phone_Number__r.simplesms__PhoneNumber__c</formula>
    <inlineHelpText>When this template is used with a workflow rule, this identifies the originating phone number.</inlineHelpText>
    <label>From Number</label>
    <type>Text</type>
</CustomField>