unpackaged/main/default/objects/simplesms__SMS_Template__c/fields/simplesms__IsActive__c.field-meta.xml
<CustomField>
    <fullName>simplesms__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The template is available for use.</description>
    <inlineHelpText>The template is available for use.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>