unpackaged/main/default/objects/simplesms__SMS_Template__c/fields/simplesms__Object__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Object__c</fullName>
    <description>The name of the SObject that this template can be used for.</description>
    <inlineHelpText>The name of the SObject that this template can be used for.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>