unpackaged/main/default/objects/simplesms__SMS_Template__c/fields/simplesms__Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Phone_Field__c</fullName>
    <description>When this template is used with a workflow rule, this identifies the phone number field on the related object to use as the recipient phone number.</description>
    <inlineHelpText>When this template is used with a workflow rule, this identifies the phone number field on the related object to use as the recipient phone number.</inlineHelpText>
    <label>Phone Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>