unpackaged/main/default/objects/simplesms__SMS_Template__c/listViews/OPH_Templates.listView-meta.xml
<ListView>
    <fullName>OPH_Templates</fullName>
    <columns>NAME</columns>
    <columns>simplesms__IsActive__c</columns>
    <columns>simplesms__Object__c</columns>
    <columns>simplesms__Code__c</columns>
    <columns>simplesms__Body__c</columns>
    <columns>simplesms__Phone_Field__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>OPH</value>
    </filters>
    <label>OPH Templates</label>
</ListView>