unpackaged/main/default/objects/simplesms__SMS_Template__c/listViews/ORI_Templates.listView-meta.xml
<ListView>
    <fullName>ORI_Templates</fullName>
    <columns>NAME</columns>
    <columns>simplesms__IsActive__c</columns>
    <columns>simplesms__Object__c</columns>
    <columns>simplesms__Code__c</columns>
    <columns>simplesms__Body__c</columns>
    <columns>simplesms__Phone_Field__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>ORI</value>
    </filters>
    <filters>
        <field>simplesms__IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ORI Templates</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>