unpackaged/main/default/objects/simplesms__SMS_Template__c/listViews/simplesms__All.listView-meta.xml
<ListView>
    <fullName>simplesms__All</fullName>
    <columns>NAME</columns>
    <columns>simplesms__IsActive__c</columns>
    <columns>simplesms__Object__c</columns>
    <columns>simplesms__Code__c</columns>
    <columns>simplesms__Body__c</columns>
    <columns>simplesms__Phone_Field__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>