unpackaged/main/default/objects/simplesms__SMS_Template__c/listViews/simplesms__Contact_Templates.listView-meta.xml
<ListView>
    <fullName>simplesms__Contact_Templates</fullName>
    <columns>NAME</columns>
    <columns>simplesms__IsActive__c</columns>
    <columns>simplesms__Code__c</columns>
    <columns>simplesms__Body__c</columns>
    <columns>simplesms__Phone_Field__c</columns>
    <columns>simplesms__Object__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>simplesms__From_Number__c</columns>
    <columns>simplesms__Phone_Number__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>simplesms__Object__c</field>
        <operation>equals</operation>
        <value>Contact</value>
    </filters>
    <label>Contact Templates</label>
</ListView>