unpackaged/main/default/objects/simplesms__SMS_Template__c/listViews/simplesms__Opportunity_Templates.listView-meta.xml
<ListView>
    <fullName>simplesms__Opportunity_Templates</fullName>
    <columns>NAME</columns>
    <columns>simplesms__IsActive__c</columns>
    <columns>simplesms__Code__c</columns>
    <columns>simplesms__Body__c</columns>
    <columns>simplesms__Phone_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>simplesms__Object__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </filters>
    <label>Opportunity Templates</label>
</ListView>